fix search box alignment

--- a/src/help/help.scss
+++ b/src/help/help.scss
@@ -1,3 +1,5 @@
+$help-list-item-height: 40px;
+
 .ui-dialog .ui-dialog-content.help-dialog {
     padding: 0px;
     .list,
@@ -6,14 +8,11 @@
         height: 97%;
         border-right: 1px solid #dedede;
         overflow: auto;
-        padding-top: 10px;
         .help-search {
-            width: 85%;
-            margin-left: 10px;
-            margin-bottom: 16px;
-            padding-left: 5px;
-            position: relative;
-            padding-right: 20px;
+            padding: 0px 10px;
+            height: $help-list-item-height;
+            display: flex;
+            align-items: center;
         }
         .ui-icon-circle-close {
             display: inline;
@@ -27,7 +26,7 @@
             }
             span {
                 display: block;
-                height: 40px;
+                height: $help-list-item-height;
                 line-height: 2.5em;
                 padding-left: 10px;
                 cursor: pointer;
